| Bug #52988 | Unused code in signal should probably be removed | ||
|---|---|---|---|
| Submitted: | 20 Apr 2010 14:34 | Modified: | 2 Dec 2010 19:16 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[2 Dec 2010 13:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/125808 3356 Jonas Oreland 2010-12-02 ndb - bug#52988 - remove unused/useless code
[2 Dec 2010 15:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/125821 3358 Jonas Oreland 2010-12-02 ndb - bug#52988 - remove unused/useless code
[2 Dec 2010 15:45]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.40 (revid:jonas@mysql.com-20101202154404-ycneqfxoyw53aupe) (version source revid:jonas@mysql.com-20101202154404-ycneqfxoyw53aupe) (merge vers: 5.1.51-ndb-6.3.40) (pib:23)
[2 Dec 2010 15:56]
Jonas Oreland
pushed to 6.3.40, 7.0.21 and 7.1.10
[2 Dec 2010 15:56]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.21 (revid:jonas@mysql.com-20101202155244-n8g85n3g2s1wf0kv) (version source revid:jonas@mysql.com-20101202155244-n8g85n3g2s1wf0kv) (merge vers: 5.1.51-ndb-7.0.21) (pib:23)
[2 Dec 2010 19:16]
Jon Stephens
Doesn't appear to have any user-visible impact; closed without further action.

Description: The following signal has code building a list of nodes which is not used by the signal receiver: sendSignal(CMVMI_REF, GSN_EVENT_REP, signal, Tlen, JBB); The code: for (fnNodePtr.i = 1; fnNodePtr.i < MAX_NDB_NODES; fnNodePtr.i++) { jam(); ptrAss(fnNodePtr, nodeRec); if (fnNodePtr.i != fnOwnNodePtr.i) { if (fnNodePtr.p->phase == ZRUNNING) { jam(); signal->theData[Tlen] = fnNodePtr.i; signal->theData[Tlen + 1] = fnNodePtr.p->ndynamicId; if (Tlen < 25) { /*----------------------------------------------------------------*/ // This code can only report 11 nodes. // We need to update this when increasing the number of nodes // supported. /*-----------------------------------------------------------------*/ Tlen += 2; } }//if }//if }//for How to repeat: Code inspection Suggested fix: Unless this has a purpose this should probably be removed.