ndb - bug#52988 - remove unused/useless code